package de.tudresden.inf.st.mathgrass.api.task.question;

import de.tudresden.inf.st.mathgrass.api.task.question.Question;

public class GraphMarkingQuestion extends Question {
}
